# polyagent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
agents/: app_tester.py  architect.py  chat.py  coder.py  designer.py  llm.py  researcher.py  swagger_agent.py  tester.py  ui_planner.py  ui_tester.py
cli/: main.py  report.py  runner.py  skills.py
graphs/: state.py  workflow.py
prompts/: loader.py
prompts/system_prompts/: app_tester.txt  architect.txt  chat.txt  coder.txt  designer.txt  designer_backend.txt  designer_frontend.txt  designer_plan.txt  designer_sql.txt  swagger.txt  tester.txt  tester_swagger.txt  ui_planner.txt  ui_tester.txt
schema/: models.py
tools/: appium_driver.py  browser.py  file_ops.py  file_reader.py  swagger_parser.py  terminal.py  test_executor.py  web_search.py
user/tests/: conftest.py  test_api_app_dynamic_control.py
