[project]
name = "polyagent-ai"
version = "0.1.0"
description = "Multi-agent framework for code generation, API testing, and UI automation"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["agent", "llm", "cli", "automation", "testing", "langgraph", "playwright", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Code Generators",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "httpx[socks]>=0.28.1",
    "langchain-core>=1.2.23",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "playwright>=1.58.0",
    "rich>=14.3.3",
    "tavily-python>=0.7.23",
    "typer>=0.24.1",
    "readchar>=4.2.2",
    "requests>=2.33.0",
    "prompt-toolkit>=3.0.0",
]

[project.urls]
Homepage   = "https://github.com/ForeverGuo/polyagent"
Repository = "https://github.com/ForeverGuo/polyagent"
Issues     = "https://github.com/ForeverGuo/polyagent/issues"
Changelog  = "https://github.com/ForeverGuo/polyagent/blob/main/CHANGELOG.md"

[project.scripts]
polyagent = "cli.main:main_cli"

[tool.hatch.build.targets.wheel]
packages = ["agents", "graphs", "tools", "prompts", "schema", "cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.4.3",
    "twine>=6.2.0",
]
